--- a/scss/style.css
+++ b/scss/style.css
@@ -1,7 +1,8 @@
 /*** Reste ***/
 body {
-  width: 100%;
+  width: 1519px;
   height: 100%;
+  margin: 0 auto;
 }
 
 a {
@@ -736,22 +737,28 @@ a {
 }
 
 #formation_img {
-  margin-left: 20%;
-}
-#formation_img img {
+  padding-right: 67px;
   width: 618px;
   height: 378px;
 }
+#formation_img img {
+  width: 100%;
+  height: 100%;
+}
+
+#sp_formation_img_b {
+  width: 100%;
+}
 
 #sp_formation_img {
-  width: 563px;
+  width: 40%;
   height: 260px;
 }
 #sp_formation_img img {
   margin-top: -180px;
   z-index: -99;
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
 #block_formation {
@@ -762,10 +769,14 @@ a {
   width: 50%;
 }
 
+#formation_img_b {
+  width: 50%;
+}
+
 #reseaux {
   width: 100%;
   padding-left: 100px;
-  padding-top: 140px;
+  padding-top: 0px;
 }
 
 #posts_instagrams h5 {
@@ -774,6 +785,9 @@ a {
   font-weight: normal;
 }
 
+.reseaux_img {
+  margin-right: 32px;
+}
 .reseaux_img a {
   width: 236px;
   height: 236px;
@@ -886,122 +900,592 @@ a {
   color: #ff6c52;
 }
 
+/*/
+@media screen and (max-width: 576px)  {
+
+	.rapide_acces{
+		a{
+			width: 120px;
+			height: 110px;
+			color: $color_three;
+		}
+	}
+
+	.card{
+		width: 400px !important;
+		height: 450px !important;
+		margin-right: 50% !important;
+		margin-bottom: 5%;
+	}
+
+	.card-body{
+		height: 200px !important;
+	}
+
+	.sp_title{
+		h2{
+			font-size: 20px !important;
+			line-height: 0.5;
+		}
+	}
+
+	#min_card{
+		width: 140%;
+		margin: 50px 0px;
+	}
+
+	.sp_hr{
+		hr{
+	    	width: 20px !important;
+	    	margin: 16px 0px 0px 18px !important;
+			}
+	}
+
+	.big_title{
+		width: 70%;
+		margin-bottom: 40px;
+	}
+
+
+	.block_lavie{
+		width: 300px !important;
+		a{
+			text-decoration: none;
+			width: 300px !important;
+			img{
+				width: 300px !important;
+				height: 300px !important;
+			}
+		}
+	}
+
+	#block_accueil{
+		margin-left: 8% !important;
+		width: 500px !important;
+		margin-top: 0px !important;;
+	}
+
+	#welcome_horaires{
+		width: 500px !important;
+		margin-top: 10px !important;
+		margin-left: 8% !important;
+	}
+
+
+}
+
+@media screen and (max-width: 768px) and (min-width: 576px){
+
+
+
+
+
+
+	.sp_title{
+		h2{
+			font-size: 35px !important;
+			line-height: 0.5;
+		}
+	}	
+
+		.sp_hr{
+		hr{
+	    	width: 40px !important;
+	    	margin: 16px 0px 0px 18px !important;
+			}
+		}
+
+	.block_lavie{
+		width: 500px !important;
+		a{
+			text-decoration: none;
+			width: 500px !important;
+			img{
+				width: 500px !important;
+				height: 300px !important;
+			}
+		}
+	}
+
+	#block_accueil{
+		margin-left: 8% !important;
+		width: 500px !important;
+		margin-top: 0px !important;
+	}
+
+	#welcome_horaires{
+		width: 500px !important;
+		margin-top: 10px !important;
+		margin-left: 8% !important;
+	}
+
+
+}
+
+
+
+@media screen and (max-width: 992px) and( min-width: 769px){
+
+
+
+
+	#block_accueil{
+		margin-left: 10%;
+		width: 430px ;
+	}
+
+	#welcome_horaires{
+		width: 230px !important;
+	}
+
+	#footer_map{
+		width: 100%;
+		height: 500px;
+	}	
+
+
+
+	#formation_img{
+		margin-left: 8%;
+		img{
+			width: 50% !important;	
+
+		}
+	}
+
+	#sp_formation_img{
+		img{
+			width: 50% !important;
+		}
+	}
+
+}
+
+*/
 @media screen and (max-width: 576px) {
+  #acces_rapide {
+    margin-top: 330px;
+  }
+
   .rapide_acces a {
     width: 120px;
     height: 110px;
     color: #282828;
   }
 
-  .card {
-    width: 400px !important;
-    height: 450px !important;
-    margin-right: 50% !important;
-    margin-bottom: 5%;
-  }
-
-  .card-body {
-    height: 200px !important;
-  }
-
   .sp_title h2 {
-    font-size: 20px !important;
+    font-size: 22px;
     line-height: 0.5;
   }
 
-  #min_card {
-    width: 140%;
-    margin: 50px 0px;
-  }
-
   .sp_hr hr {
-    width: 20px !important;
-    margin: 16px 0px 0px 18px !important;
-  }
-
-  .big_title {
-    width: 70%;
-    margin-bottom: 40px;
-  }
-
-  .block_lavie {
-    width: 300px !important;
-  }
-  .block_lavie a {
-    text-decoration: none;
-    width: 300px !important;
-  }
-  .block_lavie a img {
-    width: 300px !important;
-    height: 300px !important;
-  }
-
-  #block_accueil {
-    margin-left: 8% !important;
-    width: 500px !important;
-    margin-top: 0px !important;
-  }
-
-  #welcome_horaires {
-    width: 500px !important;
-    margin-top: 10px !important;
-    margin-left: 8% !important;
-  }
-}
-@media screen and (max-width: 768px) and (min-width: 576px) {
-  #header {
-    background-size: 100% 500px;
-    height: 500px;
-    width: 100%;
-    overflow: hidden;
-  }
-
-  #acces_rapide {
-    margin-top: 220px !important;
+    width: 22px;
+    margin: 20px 0px 0px 5px;
   }
 
   .card {
-    width: 70% !important;
-    height: 450px !important;
+    width: 70%;
+    height: 480px;
     margin-right: 20%;
     margin-bottom: 5%;
   }
 
+  #lavie {
+    padding-left: 40px;
+  }
+
+  #lavie_block {
+    margin-top: 5px;
+  }
+
+  .block_lavie {
+    width: 450px;
+  }
+  .block_lavie a {
+    width: 100%;
+  }
+  .block_lavie a img {
+    width: 100%;
+    height: 250px;
+  }
+
+  #retrouvez_nous {
+    background-size: 100% 340px;
+    width: 100%;
+    height: 850px;
+    margin-top: 80px;
+    margin-bottom: 200px;
+  }
+
+  #block_accueil {
+    height: 470px;
+    width: 100%;
+    border: none;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    margin-left: 0px;
+    margin-top: 342px;
+  }
+
+  #welcome_horaires {
+    width: 100%;
+    height: 260px;
+    background: #ff6c52;
+    border-radius: 30px 0px 30px 0px;
+    -webkit-border-radius: 30px 0px 30px 0px;
+    -moz-border-radius: 30px 0px 30px 0px;
+    margin-top: 8px;
+    margin-left: 0px;
+  }
+
+  #formation {
+    padding-left: 0px;
+    width: 100%;
+  }
+
+  #formation_img {
+    padding-right: 0px;
+    width: 100%;
+    height: 300px;
+  }
+  #formation_img img {
+    border-radius: 30px 0px 30px 0px;
+    -webkit-border-radius: 30px 0px 30px 0px;
+    -moz-border-radius: 30px 0px 30px 0px;
+  }
+
+  #formation_img_b {
+    width: 100%;
+  }
+
+  #formation_text {
+    width: 150px;
+  }
+
+  #sp_formation_img_b {
+    visibility: hidden;
+  }
+
+  #block_formation {
+    width: 100%;
+    text-align: center;
+  }
+
+  #block_formation_b {
+    width: 100%;
+    text-align: center;
+  }
+
+  #formation_title {
+    width: 100%;
+  }
+  #formation_title h2 {
+    font-size: 16px;
+  }
+
+  #formation_text {
+    width: 100%;
+    padding: 12px;
+  }
+  #formation_text p {
+    font-size: 14px;
+  }
+
+  #formation_btn {
+    margin-top: -15px;
+    margin-bottom: 15px;
+  }
+
+  #formation_img_b {
+    width: 100%;
+  }
+
+  .reseaux_img {
+    margin-top: 20px;
+    width: 350px;
+    height: 350px;
+  }
+  .reseaux_img a {
+    width: 350px;
+    height: 350px;
+  }
+
+  #footer {
+    margin-bottom: 50px;
+  }
+
+  #footer_info {
+    width: 100%;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  #footer_adresse {
+    text-align: center;
+  }
+  #footer_adresse h6 {
+    width: 100%;
+  }
+
+  #footer_map {
+    width: 100%;
+    height: 566px;
+  }
+  #footer_map img {
+    width: 100%;
+    height: 100%;
+  }
+
+  #footer_title {
+    width: 100%;
+  }
+  #footer_title h2 {
+    width: 100%;
+    text-align: center;
+  }
+
+  #sp_gropue, #radio_b, #uni_occ {
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  #acces_rapide {
+    margin-top: 350px;
+  }
+
+  .big_title {
+    width: 87%;
+    margin-bottom: 40px;
+  }
+
   .sp_title h2 {
-    font-size: 35px !important;
+    font-size: 30px;
     line-height: 0.5;
   }
 
   .sp_hr hr {
-    width: 40px !important;
-    margin: 16px 0px 0px 18px !important;
+    width: 50px;
+    margin: 20px 0px 0px 10px;
+  }
+
+  .card {
+    width: 70%;
+    height: 480px;
+    margin-right: 20%;
+    margin-bottom: 5%;
+  }
+
+  .card_date {
+    margin: 20px 0px 10px 0px;
+  }
+
+  #lavie_block {
+    margin-top: 10px;
+    margin-left: 0px;
   }
 
   .block_lavie {
-    width: 500px !important;
+    width: 450px;
   }
   .block_lavie a {
-    text-decoration: none;
-    width: 500px !important;
+    width: 100%;
   }
   .block_lavie a img {
-    width: 500px !important;
-    height: 300px !important;
+    width: 100%;
+    height: 250px;
+  }
+
+  #retrouvez_nous {
+    background-size: 100% 340px;
+    height: 900px;
+    margin-top: 80px;
+    margin-bottom: 200px;
   }
 
   #block_accueil {
-    margin-left: 8% !important;
-    width: 500px !important;
-    margin-top: 0px !important;
+    height: 470px;
+    width: 100%;
+    border: none;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    margin-left: 0px;
+    margin-top: 342px;
   }
 
   #welcome_horaires {
-    width: 500px !important;
-    margin-top: 10px !important;
-    margin-left: 8% !important;
+    width: 100%;
+    height: 260px;
+    background: #ff6c52;
+    border-radius: 30px 0px 30px 0px;
+    -webkit-border-radius: 30px 0px 30px 0px;
+    -moz-border-radius: 30px 0px 30px 0px;
+    margin-top: 8px;
+    margin-left: 0px;
+  }
+
+  #formation {
+    padding-left: 0px;
+    width: 100%;
+  }
+
+  #formation_img {
+    padding-right: 0px;
+    width: 100%;
+    height: 300px;
+  }
+  #formation_img img {
+    border-radius: 30px 0px 30px 0px;
+    -webkit-border-radius: 30px 0px 30px 0px;
+    -moz-border-radius: 30px 0px 30px 0px;
+  }
+
+  #formation_img_b {
+    width: 100%;
+  }
+
+  #formation_text {
+    width: 150px;
+  }
+
+  #sp_formation_img_b {
+    visibility: hidden;
+  }
+
+  #block_formation {
+    width: 100%;
+    text-align: center;
+  }
+
+  #block_formation_b {
+    width: 100%;
+    text-align: center;
+  }
+
+  #formation_title {
+    width: 100%;
+  }
+  #formation_title h2 {
+    font-size: 16px;
+  }
+
+  #formation_text {
+    width: 100%;
+    padding: 12px;
+  }
+  #formation_text p {
+    font-size: 14px;
+  }
+
+  #formation_btn {
+    margin-top: -15px;
+    margin-bottom: 15px;
+  }
+
+  #formation_img_b {
+    width: 100%;
+  }
+
+  .reseaux_img {
+    margin-top: 20px;
+    width: 190px;
+    height: 190px;
+  }
+  .reseaux_img a {
+    width: 200px;
+    height: 200px;
+  }
+
+  #footer {
+    margin-bottom: 50px;
+  }
+
+  #footer_info {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  #footer_map {
+    width: 100%;
+    height: 566px;
+  }
+  #footer_map img {
+    width: 100%;
+    height: 100%;
+  }
+
+  #footer_title {
+    width: 100%;
+  }
+  #footer_title h2 {
+    width: 100%;
+    text-align: center;
+  }
+
+  #footer {
+    margin-bottom: 50px;
+  }
+
+  #footer_info {
+    width: 100%;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  #footer_adresse {
+    text-align: center;
+  }
+  #footer_adresse h6 {
+    width: 100%;
+  }
+
+  #footer_map {
+    width: 100%;
+    height: 566px;
+  }
+  #footer_map img {
+    width: 100%;
+    height: 100%;
+  }
+
+  #footer_title {
+    width: 100%;
+  }
+  #footer_title h2 {
+    width: 100%;
+    text-align: center;
+  }
+
+  #sp_gropue, #radio_b, #uni_occ {
+    align-items: center;
+    justify-content: center;
   }
 }
-@media screen and (max-width: 992px) and (min-width: 769px) {
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .big_title {
+    width: 87%;
+    margin-bottom: 40px;
+  }
+
+  .sp_title h2 {
+    font-size: 40px;
+    line-height: 0.5;
+  }
+
+  .sp_hr hr {
+    width: 80px;
+  }
+
   .card {
     width: 45%;
     height: 450px;
@@ -1014,52 +1498,125 @@ a {
   }
 
   .card_text {
-    height: 80px !important;
+    height: 80px;
     overflow: hidden;
   }
 
+  #pagination_agenda {
+    margin-left: 50px;
+  }
+
+  .block_agenda {
+    width: 390px;
+    height: 260px;
+  }
+
+  #lavie_block {
+    margin-top: 50px;
+    margin-left: 0px;
+  }
+
+  .block_lavie {
+    width: 320px;
+  }
+  .block_lavie a {
+    width: 100%;
+  }
+  .block_lavie a img {
+    width: 100%;
+    height: 200px;
+  }
+
+  #retrouvez_nous {
+    height: 400px;
+  }
+
   #block_accueil {
-    margin-left: 10%;
+    height: 470px;
     width: 430px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    margin-left: 10%;
+    margin-top: 100px;
+    box-shadow: 5px 5px 5px 5px #afa7a7;
+    -webkit-box-shadow: 5px 5px 5px 5px #afa7a7;
+    -moz-box-shadow: 5px 5px 5px 5px #afa7a7;
   }
 
   #welcome_horaires {
-    width: 230px !important;
+    width: 230px;
+    height: 260px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    margin-top: 225px;
+    margin-left: -26px;
+  }
+
+  #formation_img {
+    height: 300px;
+  }
+
+  #formation_text {
+    width: 300px;
+  }
+
+  .reseaux_img {
+    margin-top: 20px;
+    width: 260px;
+    height: 260px;
+  }
+  .reseaux_img a {
+    width: 260px;
+    height: 260px;
+  }
+
+  #footer {
+    margin-bottom: 50px;
+  }
+
+  #footer_info {
+    width: 100%;
+    margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  #footer_adresse {
+    text-align: center;
+  }
+  #footer_adresse h6 {
+    width: 100%;
   }
 
   #footer_map {
     width: 100%;
-    height: 500px;
+    height: 566px;
+  }
+  #footer_map img {
+    width: 100%;
+    height: 100%;
   }
 
-  #lavie {
-    padding-left: 60px;
-  }
-
-  .block_lavie {
-    width: 350px;
-  }
-  .block_lavie a {
-    text-decoration: none;
+  #footer_title {
     width: 100%;
   }
-  .block_lavie a img {
-    width: 350px;
-    height: 180px;
+  #footer_title h2 {
+    width: 100%;
+    text-align: center;
   }
 
-  #formation_img {
-    margin-left: 8%;
-  }
-  #formation_img img {
-    width: 50% !important;
-  }
-
-  #sp_formation_img img {
-    width: 50% !important;
+  #sp_gropue, #radio_b, #uni_occ {
+    align-items: center;
+    justify-content: center;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  #acces_rapide {
+    margin-top: 250px;
+  }
+
   #pr_card {
     width: 86%;
     height: 222px;
@@ -1089,21 +1646,35 @@ a {
     overflow: hidden;
   }
 
+  #pr_date {
+    margin: 10px 0px 20px 0px;
+  }
   #pr_date a {
     line-height: 0.25;
   }
 
-  #formation_img {
-    margin-left: 10%;
-  }
-  #formation_img img {
-    width: 70%;
-    height: 60%;
+  .block_agenda {
+    width: 320px;
+    height: 260px;
   }
 
-  #sp_formation_img img {
-    width: 70%;
-    height: 100%;
+  #lavie {
+    padding-left: 80px;
+  }
+
+  #lavie_block {
+    margin-top: 50px;
+  }
+
+  .block_lavie {
+    width: 380px;
+  }
+  .block_lavie a {
+    width: 100%;
+  }
+  .block_lavie a img {
+    width: 380px;
+    height: 200px;
   }
 
   #block_accueil {
@@ -1115,24 +1686,62 @@ a {
     width: 300px;
   }
 
-  .sp_title h2 {
-    font-size: 40px;
-    line-height: 0.5;
+  #formation_img {
+    height: 350px;
   }
 
-  .sp_hr hr {
-    width: 80px;
+  #formation_text {
+    width: 320px;
+  }
+
+  .reseaux_img {
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+  }
+  .reseaux_img a {
+    width: 100%;
+    height: 100%;
+  }
+
+  #footer {
+    margin-bottom: 50px;
   }
 
   #footer_info {
-    width: 100%;
-    margin-left: 0px;
+    width: 50%;
+    margin-bottom: 50px;
   }
 
   #footer_map {
-    width: 70%;
+    width: 50%;
+    height: 566px;
+  }
+  #footer_map img {
+    width: 100%;
+    height: 100%;
   }
 }
+/*@media screen and (max-width: 1200px){
+
+
+
+
+
+
+
+
+		#footer_info{
+			width: 100%;
+			margin-left: 0px;
+		}
+
+		#footer_map{
+			width: 70%;
+		}
+
+
+}*/
 @media screen and (max-width: 992px) {
   #nav_left, #pr_card {
     display: none !important;
@@ -1150,9 +1759,9 @@ a {
     display: none !important;
   }
 
-  #acces_rapide {
-    margin-top: 350px;
-  }
+  /*	#acces_rapide{
+  		margin-top: 350px;
+  	}*/
 }
 
 /*# sourceMappingURL=style.css.map */
